--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Product</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./pages/about.html">About</a></li>
+            <li><a href="./pages/contact.html">Contact</a></li>
         </ul>
+        <hr>
+        <h1>This is the Home page:</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, voluptate.</p>
     </nav>
 </body>
 </html>
