--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colaboration-GitHub</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <nav>
@@ -12,9 +13,7 @@
             <li><a href="./pages/about.html">About</a></li>
             <li><a href="./pages/contact.html">Contact</a></li>
         </ul>
-        <hr>
-        <h1>This is the Home page:</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, voluptate.</p>
     </nav>
+    <img src="https://cdn.pixabay.com/photo/2016/12/13/21/20/alien-1905155_640.png" alt="">
 </body>
 </html>
