--- a/pages/about.html
+++ b/pages/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <nav>
@@ -16,5 +17,6 @@
     <hr>
     <h1>This is the About page:</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis, dignissimos!</p>
+    <img src="https://mediasvc.eurekalert.org/Api/v1/Multimedia/68a34acc-685b-4827-890c-4426aab70a17/Rendition/low-res/Content/Public" alt="">
 </body>
 </html>
